adapt unit test